# elasticsearch-datafusion-tableprovider

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  pg_table.rs
es-tableprovider/: Cargo.toml
es-tableprovider/src/: es_types.rs  expr.rs  lib.rs
src/: es_types.rs  expr.rs  lib.rs  utils.rs
