[package]
name = "elasticsearch-datafusion-tableprovider"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3"
description = "A DataFusion table provider that queries Elasticsearch"

[dependencies]
datafusion = { version = "43", features = ["backtrace"] }
datafusion-cli = "43"
tokio = { version = "1", features = ["full"] }

async-trait = "0.1"
elasticsearch = "8.15.0-alpha.1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13"
futures = "0.3"

arrow-cast = "*"


# Dependencies for bin/cli
clap = { version = "4", optional = true, features = ["derive", "cargo"] }
env_logger = { version = "0.11", optional = true }
dirs = { version = "4", optional = true }
regex = { version = "1", optional = true }
dotenv = { version = "0.15", optional = true }
object_store = "0.11"

[features]
bin-cli = ["dep:clap", "dep:env_logger", "dep:dirs", "dep:regex", "dep:dotenv"]

[[bin]]
path = "src/bin/cli.rs"
name = "cli"
required-features = ["bin-cli"]
