[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
elasticsearch-datafusion-tableprovider = { path = "../es-tableprovider"}

datafusion = { version = "46", features = ["backtrace"] }
datafusion-cli = { version = "46" }
datafusion-table-providers = { version = "0.4.0", features = ["postgres"] }
clap = { version = "4.5.36", features = ["derive"] }
tokio = {  version = "1", features = ["full"] }
env_logger = "0.11.8"
dirs = "6.0.0"
regex = "1.11.1"
dotenv = { version = "0.15" }
async-trait = "0.1.83"
# bin-cli = ["dep:clap", "dep:env_logger", "dep:dirs", "dep:regex", "dep:dotenv"]

url="2.5.4"
