[package]
name = "elasticsearch-datafusion-tableprovider"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "A DataFusion table provider that queries Elasticsearch"

[dependencies]
datafusion = { version = "46", features = ["backtrace"] }
async-trait = "0.1"
elasticsearch = "8.15.0-alpha.1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.14"
futures = "0.3"

arrow-cast = "54"
object_store = "0.11"

